<resources>
    <string name="app_name">ZhouXuanBai_News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_collection">收藏</string>
    <string name="action_share">分享</string>
    <string name="action_search">搜索</string>

    <string name="menu_news">新闻</string>
    <string name="menu_login">登陆</string>
    <string name="menu_collection">收藏</string>
    <string name="menu_shield">屏蔽</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_history">浏览历史</string>
</resources>
